Fixed Overflow / Centering.

--- a/JavaScript Practice/Color Flipper/styles.css
+++ b/JavaScript Practice/Color Flipper/styles.css
@@ -1,3 +1,13 @@
+/* Reset defaults for proper centering */
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
+    font-family: sans-serif;
+    font-weight: bold;
+}
+
 body {
     background-color: rgb(255,255,255);
 }
